fixed bug where user info dropdown was visible above navbar

--- a/src/styles/experiments/_header-version-two.scss
+++ b/src/styles/experiments/_header-version-two.scss
@@ -149,6 +149,11 @@
     border-top: 1px solid rgba(255, 255, 255, 0.1);
     transform: translateY(-100%);
 
+    // inactive class needed for desktop, reverse on mobile
+    &.user-info-dropdown-inactive {
+      opacity: 1;
+    }
+
     .user-info-dropdown-item {
       border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     }
@@ -393,6 +398,11 @@
       pointer-events: none;
       transform: translateY(-100%);
       transition: transform 350ms ease;
+
+      // hidden after animation completed
+      &.user-info-dropdown-inactive {
+        opacity: 0;
+      }
 
       .mc-badge {
         transition: transform 300ms cubic-bezier(0.250, 0.100, 0.250, 1.000);
